--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,32 +1,12 @@
 steps:
-  # Step 1: Build the Docker image
+  # Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - build
-      - '-t'
-      - 'us-central1-docker.pkg.dev/My First Project/tejas-100947705/server:${COMMIT_SHA}'
-      - '.'
-
+    args: [
+      'build', '-t',
+      'us-central1-docker.pkg.dev/$PROJECT_ID/tejas-100947705/image:${COMMIT_SHA}', '.'
+    ]
+  # Push to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/My First Project/tejas-100947705/server:${COMMIT_SHA}']
-
-
-  # - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  #   entrypoint: gcloud  # Use 'gcloud' directly instead of 'bash -c'
-  #   args:
-  #     - 'run'
-  #     - 'deploy'
-  #     - 'server'  # Your Cloud Run service name
-  #     - '--image'
-  #     - 'us-central1-docker.pkg.dev/My First Project/tejas-100947705/server:${COMMIT_SHA}'
-  #     - '--platform'
-  #     - 'managed'
-  #     - '--region'
-  #     - 'us-central1'
-  #     - '--port'
-  #     - '3000'
-  #     - '--allow-unauthenticated'
-
+    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/firstname-studentid/image:${COMMIT_SHA}']
 options:
-  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET  
-  logging: GCS_ONLY 
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
