--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,3 +10,15 @@ steps:
     args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/tejas-100947705/image:${COMMIT_SHA}']
 options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+
+  # Deploy to Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        gcloud run deploy tejas-100947705-service \
+          --image=us-central1-docker.pkg.dev/$PROJECT_ID/tejas-100947705/image:${COMMIT_SHA} \
+          --region=us-central1 \
+          --platform=managed \
+          --quiet
